force-app/main/default/objects/Company_Information__mdt/Company_Information__mdt.object-meta.xml
<CustomObject>
    <label>Company Information</label>
    <pluralLabel>Company Information</pluralLabel>
</CustomObject>