force-app/main/default/objects/Company_Information__mdt/fields/Infile_Certification_Key__c.field-meta.xml
<CustomField>
    <fullName>Infile_Certification_Key__c</fullName>
    <label>Llave de Certificación</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>