force-app/main/default/objects/Company_Information__mdt/fields/Infile_NIT__c.field-meta.xml
<CustomField>
    <fullName>Infile_NIT__c</fullName>
    <label>NIT en Infile</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>