force-app/main/default/objects/Company_Information__mdt/fields/Infile_Sign_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Infile_Sign_Endpoint__c</fullName>
    <label>Endpoint de Firma</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>