force-app/main/default/objects/Company_Information__mdt/fields/Infile_User__c.field-meta.xml
<CustomField>
    <fullName>Infile_User__c</fullName>
    <label>Usuario Infile</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>