force-app/main/default/objects/Company_Information__mdt/fields/Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email__c</fullName>
    <label>Correo de envio de facturas</label>
    <type>Email</type>
</CustomField>