force-app/main/default/objects/Company_Information__mdt/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <label>Nombre Legal</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>