force-app/main/default/objects/Company_Information__mdt/fields/NIT__c.field-meta.xml
<CustomField>
    <fullName>NIT__c</fullName>
    <label>NIT</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>