force-app/main/default/objects/Company_Information__mdt/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Teléfono</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>