force-app/main/default/objects/Company_Information__mdt/listViews/Company_Information.listView-meta.xml
<ListView>
    <fullName>Company_Information</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Legal_Name__c</columns>
    <columns>NIT__c</columns>
    <columns>Address__c</columns>
    <columns>Phone__c</columns>
    <columns>Invoice_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>Company Information</label>
</ListView>